# boonda-monorepo

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: main.yaml
apps/desktop/: package.json  pnpm-lock.yaml
apps/desktop/.github/workflows/: main.yaml
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: auth-form.tsx  upload-component.tsx
apps/desktop/src/components/ui/: dropzone.tsx
apps/desktop/src/hooks/: use-session.ts  use-sign-in.tsx  use-sign-up.tsx  use-upload.ts  use-upload.tsx
apps/desktop/src/lib/: constants.ts
apps/desktop/src/lib/utils/: index.ts
apps/desktop/src/providers/: tanstack-query-provider.tsx
apps/desktop/src/shared/validations/: auth-form.ts
apps/desktop/src/utils/supabase/: client.ts
apps/web/: package.json  vercel.json
apps/web/app/(auth)/sign-up/: page.tsx
apps/web/app/(common)/api/upload/: route.ts
apps/web/app/(common)/api/upload/callback/: route.ts
apps/web/app/(common)/api/upload/cleanup/: route.ts
apps/web/app/(common)/download/: page.tsx
apps/web/components/: upload-success-modal.tsx
apps/web/lib/: database.types.ts
