[package]
name = "desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["tray-icon"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-positioner = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2", features = ["tray-icon"] }
actix-web = "4"
tokio = { version = "1", features = ["full"] }
actix-cors = "0.7.0"
tauri-plugin-clipboard-manager = "2.0.0-beta.2"
